<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.week2.fragment.DetailWeek2Fragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/titleText"
            android:textSize="@dimen/titleTextsizeProfile" />

        <TextView
            android:id="@+id/tvFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/txtHintFirstName"
            android:textSize="@dimen/txtSize" />

        <TextView
            android:id="@+id/tvLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/txtHintLastName"
            android:textSize="@dimen/txtSize" />

        <TextView
            android:id="@+id/tvTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/hintTelnum"
            android:textSize="@dimen/txtSize" />


    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>