<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".week2.fragment.Week2Fragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="100dp"
        android:clipToPadding="false">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="50dp"
            android:paddingStart="50dp"
            android:paddingTop="50dp"
            android:paddingEnd="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_marginTop="@dimen/maginTopTitle"
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtWelcome"
                    android:textSize="@dimen/titleTextsize" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEnterName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtFirstName"
                    android:layout_marginTop="@dimen/maginTopTextView"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/maginTopEditText"
                    android:ems="10"
                    android:inputType="text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvEnterLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtLastName"
                    android:layout_marginTop="@dimen/maginTopTextView"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/maginTopEditText"
                    android:ems="10"
                    android:inputType="text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txtTel"
                    android:layout_marginTop="@dimen/maginTopTextView"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etTelNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/maginTopEditText"
                    android:ems="10"
                    android:inputType="number" />
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="@dimen/maginTopButton"
                    android:text="@string/btnRegister" />

            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</FrameLayout>