<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/week3_background"
    tools:context=".activity.week3.Week3Activity">

    <ScrollView
        android:id="@+id/ScrollLogin"
        android:paddingBottom="100dp"
        android:clipToPadding="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="50dp"
            android:paddingEnd="50dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="70dp"
                android:src="@drawable/logo_demo" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/edittext_week3_background"
                android:hint="@string/username"
                android:padding="10dp"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/edittext_week3_background"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/button_week3"
                android:text="@string/login"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnForgotPassword"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/login_text_detail" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center">

                <View
                    android:layout_width="120dp"
                    android:layout_height="1dp"
                    android:background="@color/login_text_detail" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="22dp"
                    android:layout_marginRight="22dp"
                    android:text="@string/or"
                    android:textColor="@color/login_text_detail" />

                <View
                    android:layout_width="120dp"
                    android:layout_height="1dp"
                    android:background="@color/login_text_detail" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnFacebookLogin"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_circle_week3"
                    android:padding="12dp"
                    android:src="@drawable/ic_facebook" />

                <View
                    android:layout_width="22dp"
                    android:layout_height="match_parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnGoogleLogin"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_circle_week3"
                    android:src="@drawable/ic_google" />

                <View
                    android:layout_width="22dp"
                    android:layout_height="match_parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnLineLogin"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/button_circle_week3"
                    android:src="@drawable/ic_line" />


            </LinearLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>


</androidx.appcompat.widget.LinearLayoutCompat>